{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 66,
  "lineage": "0b781f89-2d5d-0de6-9d79-14f36055c624",
  "resources": [
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target-group-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:288053372299:targetgroup/alb-target-group/d296b3262481f546",
            "arn_suffix": "targetgroup/alb-target-group/d296b3262481f546",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:288053372299:targetgroup/alb-target-group/d296b3262481f546",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target-group-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:288053372299:targetgroup/alb-target-group2/15265b64ba050ecd",
            "arn_suffix": "targetgroup/alb-target-group2/15265b64ba050ecd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:288053372299:targetgroup/alb-target-group2/15265b64ba050ecd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group2",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ff6f1ea018602ee7",
            "owner_id": "288053372299",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0511b3ff45c377555",
            "owner_id": "288053372299",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff6f1ea018602ee7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_internet_gateway.main-gw",
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078389ee329f3aefb",
            "route_table_id": "rtb-0511b3ff45c377555",
            "subnet_id": "subnet-0853228f653d3098b"
          },
          "dependencies": [
            "module.create-alb.aws_internet_gateway.main-gw",
            "module.create-alb.aws_route_table.main-public",
            "module.create-alb.aws_subnet.main-public-1",
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01101cf387567b523",
            "route_table_id": "rtb-0511b3ff45c377555",
            "subnet_id": "subnet-0071fc536aaaef082"
          },
          "dependencies": [
            "module.create-alb.aws_internet_gateway.main-gw",
            "module.create-alb.aws_route_table.main-public",
            "module.create-alb.aws_subnet.main-public-2",
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0408f55bfc1e8b310",
            "route_table_id": "rtb-0511b3ff45c377555",
            "subnet_id": "subnet-0c7e0da1c4514bec2"
          },
          "dependencies": [
            "module.create-alb.aws_internet_gateway.main-gw",
            "module.create-alb.aws_route_table.main-public",
            "module.create-alb.aws_subnet.main-public-3",
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:security-group/sg-0cc541741c82a5d7b",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc541741c82a5d7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": null,
            "owner_id": "288053372299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:security-group/sg-078c0f1a1e42749a4",
            "description": "security group for my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078c0f1a1e42749a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc541741c82a5d7b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myinstance",
            "name_prefix": null,
            "owner_id": "288053372299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myinstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_security_group.elb-securitygroup",
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:subnet/subnet-03ef801d437c55a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03ef801d437c55a9a",
            "map_public_ip_on_launch": false,
            "owner_id": "288053372299",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:subnet/subnet-0aa6fd681b80c5be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0aa6fd681b80c5be2",
            "map_public_ip_on_launch": false,
            "owner_id": "288053372299",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:subnet/subnet-096fcdcfb04ba3919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-096fcdcfb04ba3919",
            "map_public_ip_on_launch": false,
            "owner_id": "288053372299",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:subnet/subnet-0853228f653d3098b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0853228f653d3098b",
            "map_public_ip_on_launch": true,
            "owner_id": "288053372299",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:subnet/subnet-0071fc536aaaef082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0071fc536aaaef082",
            "map_public_ip_on_launch": true,
            "owner_id": "288053372299",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:subnet/subnet-0c7e0da1c4514bec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c7e0da1c4514bec2",
            "map_public_ip_on_launch": true,
            "owner_id": "288053372299",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0de2b055fe833de54"
          },
          "dependencies": [
            "module.create-alb.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create-alb",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:288053372299:vpc/vpc-0de2b055fe833de54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08000f0ed2038f418",
            "default_route_table_id": "rtb-0ced87494c2f7061e",
            "default_security_group_id": "sg-07aac4ab7e13dab86",
            "dhcp_options_id": "dopt-0ce6fe0916199d417",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0de2b055fe833de54",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ced87494c2f7061e",
            "owner_id": "288053372299",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}